--- a/source/min-api/max-api/script/Info.plist
+++ b/source/min-api/max-api/script/Info.plist
@@ -25,11 +25,11 @@
 	</dict>
 	
 	<key>CFBundleVersion</key>
-	<string>HEAD-HASH-NOTFOUND..</string>
+	<string>..</string>
 	<key>CFBundleShortVersionString</key>
-	<string>HEAD-HASH-NOTFOUND..</string>
+	<string>..</string>
 	<key>CFBundleLongVersionString</key>
-	<string>${MACOSX_BUNDLE_EXECUTABLE_NAME} HEAD-HASH-NOTFOUND.. - Copyright (c) 1974 Acme Inc</string>
+	<string>${MACOSX_BUNDLE_EXECUTABLE_NAME} .. - Copyright (c) 1974 Acme Inc</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright (c) 1974 Acme Inc</string>
 	
