--- a/externals/ht.instance.mxo/Contents/Info.plist
+++ b/externals/ht.instance.mxo/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18G6020</string>
+	<string>21G72</string>
 	<key>C74ObjectProperties</key>
 	<dict>
 		<key>c74excludefromcollectives</key>
@@ -14,15 +14,15 @@
 	<key>CFBundleExecutable</key>
 	<string>ht.instance</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.acme.ht-instance</string>
+	<string>com.cycling74.ht-instance</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleLongVersionString</key>
-	<string>ht.instance .. - Copyright (c) 1974 Acme Inc</string>
+	<string>ht.instance 1.0.0 - Copyright (c) 2018 Cycling '74</string>
 	<key>CFBundlePackageType</key>
 	<string>iLaX</string>
 	<key>CFBundleShortVersionString</key>
-	<string>..</string>
+	<string>1.0.0</string>
 	<key>CFBundleSignature</key>
 	<string>max2</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -30,28 +30,30 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>..</string>
+	<string>1.0.0</string>
 	<key>CSResourcesFileMapped</key>
 	<true/>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11C505</string>
+	<string>13C100</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>12.1</string>
 	<key>DTSDKBuild</key>
-	<string>19B90</string>
+	<string>21C46</string>
 	<key>DTSDKName</key>
-	<string>macosx10.15</string>
+	<string>macosx12.1</string>
 	<key>DTXcode</key>
-	<string>1131</string>
+	<string>1321</string>
 	<key>DTXcodeBuild</key>
-	<string>11C505</string>
+	<string>13C100</string>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.14</string>
+	<string>10.11</string>
 	<key>LSRequiresCarbon</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright (c) 1974 Acme Inc</string>
+	<string>Copyright (c) 2018 Cycling '74</string>
 </dict>
 </plist>
